# ChangeLog for media-sound/alsamixergui
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsamixergui/ChangeLog,v 1.2 2002/05/24 07:43:44 agenkin Exp $

*alsamixergui-0.9.0.1.2 (24 May 2002)

  24 May 2002; Arcady Genkin <agenkin@thpoon.com> alsamixergui-0.9.0.1.2.ebuild :
  
  Initial version of the package, created by you@hanez.org (Johannes Findeisen).